fix parrelex scrollbar hiding

--- a/css/parrelex.scss
+++ b/css/parrelex.scss
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-  width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
